chore: save processed data

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1885,7 +1885,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/hazel/Desktop/Self Study/kiam8/insurance-risk-analytics/notebooks/../scripts/eda.py:65: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/Users/hazel/Desktop/Self Study/kiam8/insurance-risk-analytics/notebooks/../scripts/eda.py:63: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  .groupby('make')['TotalClaims']\n"
      ]
     },
@@ -2160,6 +2160,17 @@
    ],
    "source": [
     "plotter.plot_correlation_heatmap(numerical_cols)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "02e66721",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_loader.df = data\n",
+    "data_loader.save_data(\"../data/processed/insurance_data.txt\", sep=\"|\")"
    ]
   }
  ],
